--- a/css/index.css
+++ b/css/index.css
@@ -134,14 +134,14 @@ html {
 }
 html,
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Major Mono Display', monospace;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Source Code Pro', monospace;
 }
 h1 {
   font-size: 4rem;
