--- a/less/global.less
+++ b/less/global.less
@@ -7,11 +7,12 @@ html {
 }
 
 html, body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Major Mono Display', monospace;
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Indie Flower', cursive;
+
+font-family: 'Source Code Pro', monospace;
 }
 
 h1 {
