--- a/less/home-page.less
+++ b/less/home-page.less
@@ -97,7 +97,11 @@
     @media @mobile {
       flex-wrap: wrap;
     }
-
+    canvas {
+      border: 1px solid black;
+      width: 560px;
+      height: 360px;
+    }
     .destination {
       width: 30%;
       margin-bottom: 30px;
